# latin_squares

./: .gitignore  Cargo.toml  LICENSE  count_cs.sh  generate_cs.sh  generate_mols_data.sh  random_scs.sh
.cargo/: config.toml
data/lcs/: latin_lcs4.txt  latin_lcs5.txt  latin_lcs6.txt
data/main_classes/: latin_mc4.txt  latin_mc5.txt  latin_mc6.txt  latin_mc7.txt
data/orthogonal/: latin_mc3orth.txt  latin_mc4orth.txt  latin_mc5orth.txt  latin_mc6orth.txt  latin_mc7orth.txt
data/scs/: latin_scs3.txt  latin_scs4.txt  latin_scs5.txt  latin_scs6.txt  latin_scs7.txt
src/: args.rs  bitset.rs  bitvec.rs  compressed_latin_square.rs  constants.rs  constraints.rs  cycles.rs  diagonal_latin_square_generator.rs  generator.rs  hitting_set_generator.rs  isotopy_class_generator.rs  latin_square.rs  latin_square_dyn.rs  latin_square_generator.rs  latin_square_oa_generator.rs  latin_square_pair_generator.rs  latin_square_trait.rs  latin_square_triple_generator.rs  main.rs  main_class_generator.rs  mmcs_hitting_set_generator.rs  mols.rs  new_hitting_set_generator.rs  oa_constraints.rs  oa_generator.rs  orderly_sq_generator.rs  orthogonal_array.rs  orthogonal_generator.rs  pair_constraints.rs  pairs5.rs  pairs5.txt  partial_latin_square.rs  partial_latin_square_dyn.rs  partial_oa_generator.rs  partial_orthogonal_array.rs  partial_square_generator.rs  permutable.rs  permutation.rs  permutation_dyn.rs  permutation_simd.rs  (+9 more)
