[package]
name = "latin_squares"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
# nauty-Traces-sys = { version = "0.7.0", features = ["native"] }

[profile.release]
debug = true
incremental = true
# lto = true
